# Glissando

./: Cargo.toml  settings.toml  terminl_history
src/: _shader.wgsl  config.rs  debug.rs  main.rs  osc_server.rs  screen.rs  shader copy.wgsl  shader.wgsl  video.rs  wgpu_app.rs  wgpu_app_handler.rs  yuv_convert.wgsl
