[package]
name = "glissando"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
env_logger = "0.11.9"
features = "0.10.0"
futures = "0.3.32"
log = "0.4.29"
parking_lot = "0.12.5"
pollster = "0.4.0"
scap = "0.0.8"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
wgpu = { version = "28.0.0", features = ["serde"] }
winit = "0.30.12"
